--- a/src/style/index.css
+++ b/src/style/index.css
@@ -1,10 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap');
-
 *{
 	padding: 0;
 	margin: 0;
 	box-sizing: border-box;
-	font-family: 'Open Sans', sans-serif;
+
 }
 
 .App{
@@ -32,4 +30,49 @@
 		margin-left: 0;
 	}
 
+}
+
+.font-face-gm {
+	font-family: "Montserrat";
+   }
+
+@font-face {
+	font-family: 'Montserrat-SemiBold';
+	src: local('Montserrat-SemiBold'), url(../assets/fonts/montserrat-v24/Montserrat-SemiBold.ttf) format('ttf');
+  }
+  
+  @font-face {
+	font-family: 'Montserrat';
+	src: local('Montserrat'), url(../assets/fonts/montserrat-v24/Montserrat-VariableFont_wght.ttf) format('ttf');
+  }
+
+h1 {
+    font-size: 50px !important;
+	font-family: Montserrat;
+}
+
+h2 {
+    font-size: 38px !important;
+	font-family: Montserrat;
+}
+
+h3 {
+    font-size: 28px;
+    font-weight: 600 !important;
+}
+
+h4 {
+    font-size: 20px !important;
+	font-weight: 600 !important;
+	font-family: Montserrat;
+}
+
+h5 {
+    font-size: 16px !important;
+	font-family: Montserrat;
+}
+
+p {
+    font-size: 14px !important;
+	font-family: Montserrat;
 }
